--- a/package.json
+++ b/package.json
@@ -60,20 +60,35 @@
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-terser": "^7.0.2",
-    "standard-version": "^9.3.1"
+    "standard-version": "^9.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "@oozcitak/util": "8.3.4",
     "@oozcitak/dom": "1.15.6",
+    "@oozcitak/util": "8.3.4",
+    "assert-browserify": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "color-name": "^1.1.4",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "encoding": "^0.1.13",
     "escape-html": "^1.0.3",
+    "fs": "0.0.1-security",
     "html-to-vdom": "^0.7.0",
+    "https-browserify": "^1.0.0",
     "image-size": "^1.0.0",
     "image-to-base64": "^2.2.0",
     "jszip": "^3.7.1",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "nanoid": "^3.1.25",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
     "virtual-dom": "^2.1.1",
     "xmlbuilder2": "2.1.2"
   },
